--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,9 @@ spring.datasource.url=jdbc:mysql://localhost:3306/flight_ticket
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.username=root
 spring.datasource.password=0130
+# 这个是配置模板路径的，默认就是templates，可不用配置
+spring.thymeleaf.prefix=classpath:/templates/
+# 下面3个不做解释了，可以不配置
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.content-type=text/html
